// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchField /> Custom story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    style="margin-bottom: 1rem;"
  >
    <button
      class="button button--layout-none button--primary button--lg button--variant-default search-button"
      type="button"
    >
      <span
        class="button__text"
      >
        Search
      </span>
    </button>
    <div
      class="search-field"
    >
      <input
        class="input search-field__input"
        placeholder="Search"
        type="search"
      />
      <svg
        class="icon search-field__icon"
        fill="currentColor"
        height="1.25rem"
        role="img"
        style="--icon-size: 1.25rem;"
        viewBox="0 0 24 24"
        width="1.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          search
        </title>
        <path
          d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
    </div>
  </div>
  <div>
    <div
      class="search-field"
    >
      <input
        class="input search-field__input"
        placeholder="Search"
        type="search"
      />
      <svg
        class="icon search-field__icon"
        fill="currentColor"
        height="1.25rem"
        role="img"
        style="--icon-size: 1.25rem;"
        viewBox="0 0 24 24"
        width="1.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          search
        </title>
        <path
          d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
    </div>
    <button
      class="button button--layout-none button--primary button--lg button--variant-default search-button"
      type="button"
    >
      <span
        class="button__text"
      >
        Search
      </span>
    </button>
  </div>
</div>
`;

exports[`<SearchField /> Default story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="search-bar w-96"
  >
    <div
      class="search-field"
    >
      <input
        class="input search-field__input"
        placeholder="Search"
        type="search"
      />
      <svg
        class="icon search-field__icon"
        fill="currentColor"
        height="1.25rem"
        role="img"
        style="--icon-size: 1.25rem;"
        viewBox="0 0 24 24"
        width="1.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          search
        </title>
        <path
          d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
    </div>
    <button
      class="button button--layout-none button--primary button--lg button--variant-default search-button"
      type="button"
    >
      <span
        class="button__text"
      >
        Search
      </span>
    </button>
  </div>
</div>
`;

exports[`<SearchField /> Disabled story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="search-bar w-96"
  >
    <div
      class="search-field"
    >
      <input
        class="input search-field__input"
        disabled=""
        placeholder="Search"
        type="search"
      />
      <svg
        class="icon search-field__icon search-field__icon--disabled"
        fill="currentColor"
        height="1.25rem"
        role="img"
        style="--icon-size: 1.25rem;"
        viewBox="0 0 24 24"
        width="1.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          search
        </title>
        <path
          d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
    </div>
    <span
      class="search-button button__disabled"
    >
      <button
        class="button button--layout-none button--disabled button--primary button--lg button--variant-default"
        disabled=""
        type="button"
      >
        <span
          class="button__text"
        >
          Search
        </span>
      </button>
    </span>
  </div>
</div>
`;

exports[`<SearchField /> SearchButton story renders snapshot 1`] = `
<div
  class="p-8"
>
  <button
    class="button button--layout-none button--primary button--lg button--variant-default search-button w-96"
    type="button"
  >
    <span
      class="button__text"
    >
      Search
    </span>
  </button>
</div>
`;

exports[`<SearchField /> SearchField story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="search-field"
  >
    <input
      class="input search-field__input w-96"
      placeholder="Search"
      type="search"
    />
    <svg
      class="icon search-field__icon"
      fill="currentColor"
      height="1.25rem"
      role="img"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        search
      </title>
      <path
        d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
      />
    </svg>
  </div>
</div>
`;
